--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
+    "react-native-image-picker": "^5.3.1",
+    "react-native-navigation": "^7.32.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11"
   },
