--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "@rneui/themed": "^4.0.0-rc.7",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
