--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -16,7 +17,10 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "@supabase/supabase-js": "^2.21.0",
     "expo": "~48.0.10",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
@@ -26,10 +30,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.11",
-    "expo-image-picker": "~14.1.1",
-    "expo-camera": "~13.2.1",
-    "expo-updates": "~0.16.4"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
