--- a/app.json
+++ b/app.json
@@ -20,9 +20,10 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/eulogoSquare.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.cesconettoedu.edsbeerlist"
     },
     "web": {
       "favicon": "./assets/favicon.png"
