--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-image-picker": "^5.3.1",
     "react-native-navigation": "^7.32.1",
     "react-native-safe-area-context": "4.5.0",
@@ -33,7 +33,8 @@
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.8"
   },
   "private": true
 }
