--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
+    "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
