--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "splash": {
       "image": "./assets/eulogo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -21,7 +21,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/eulogoSquare.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#000000"
       },
       "package": "com.cesconettoedu.edsbeerlist"
     },
